# Mean_Shift_Clustering

./: CMakeLists.txt  Mean Shift Clustering.pptx  main.cpp  main_parallel.cpp  main_sequential.cpp
